--- a/index.html
+++ b/index.html
@@ -16,35 +16,45 @@
       <h1>Laura White, Web Developer</h1>
       <h2><img alt="Laura White" class="float-right" src="/images/laura.jpg" />About Me</h2>
       <p id="about">Hi! I'm Laura, a web developer with six years of experience creating and optimizing front-end content for businesses and educational institutions.</p>
-      <p>Currently, I work as the District Webmaster for Milwaukee Public schools. Some of my responsibilities include: 
-      <ul>
-        <li>Managing and responding to all front-end technical requests from users spanning 150 schools and Central Services</li>
-        <li>Extending capabilities of custom content management system (CMS) with HTML, CSS, and JavaScript for hundreds of webpages</li>
-        <li>Troubleshooting technical SEO issues</li>
-        <li>Training staff on how to create their own web content</li>
-      </ul>
-      <p>To learn more about my work history, check out my <a href="https://www.linkedin.com/in/laura-white-32087193/" target="_blank">LinkedIn profile</a>!</p>
+      <p>Currently, I work as the District Webmaster for Milwaukee Public schools and working on some newer projects involving the React library and Node.js. To learn more about my work history, check out my <a href="https://www.linkedin.com/in/laura-white-32087193/" target="_blank">LinkedIn profile</a>!</p>
   </header>
-  <div>
+  <div class="portfolio">
     <h2>Projects</h2>
-    <p>To take a look at some of my projects, click on an item below to expand.</p>
-    <h3>Meme Generator <button>=></button></h3>
-    <div class="hidden"><p>Okay, I admit it: I love memes! Some of my favorite projects for the web involve generating memes or using the GIPHY API to get memes to appear on a webpage.</p>
-    <p>This simple web app allows you to generate your own memes through a simple form.</p>
+    <p>To take a look at some of my projects, click on an button below to expand the section.</p>
+    <h3><button>=></button> Meme Generator</h3>
+    <div class="hidden"><img id="cat-meme" alt="cat meme" class="float-left" src="https://upload.wikimedia.org/wikipedia/en/8/83/DoctorWho42_cat_Snow.jpg?20150107013737" /><p>Okay, I admit it: I love memes! Some of my favorite projects for the web involve generating memes or using the GIPHY API to get memes to appear on a webpage.</p>
+    <p>This simple web app allows you to generate your own memes through a simple form and the only time I will ever use the Comic Sans font in a web app.</p>
     <p>Check out my Github repo to see the code for this project.</p>
     </div>
-    <h3>Connect Four Game =></h3>
-    <div class="hidden"><p>Item description</p></div>
-    <h3>Lavender Hill Properties Website =></h3>
-    <div class="hidden"><p><img alt="murray avenue duplex" class="float-left portfolio-img" src="/images/murray_ave.jpeg">The <a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank"></a>Lavender Hill Properties</a> website was designed for now husband in 2015 when I first learned how to put HTML and CSS together. Currently, I am redesigning the website using React, CSS in JS components and adding a node.js backend so that emails can be sent directly for inquiries.</p>
+    <h3><button>=></button> Connect Four Game</h3>
+    <div class="hidden"><p>One of my bigger accomplishments during my bootcamp at Springboard was building a Connect 4 game with JavaScript. The game uses an array to keep track of which pieces belong to player 1 or player 2. The code to check for the winner was implemented by the Springboard instructors.</p>
+    <p>Check out my solution on Github!</p>
+    </div>
+    <h3><button>=></button> Lavender Hill Properties Website</h3>
+    <div class="hidden"><p><img alt="murray avenue duplex" class="float-left portfolio-img" src="/images/murray_ave.jpeg">The <a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank"></a>Lavender Hill Properties</a> website was designed for now husband in 2015 when I first learned how to put HTML and CSS together. Currently, I am redesigning the website using React, CSS in JS components and adding a node.js backend so that emails can be sent directly for inquiries. It's always a great feeling to put new skills to use.</p>
       <p><a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank">Check out a working version of this website!</a></p>
+    </div>
+    <h3><button>=></button> See Yourself Here Blog</h3>
+    <div class="hidden"><p>This blog was created with CSS flexbox to showcase the accomplishments of the students and staff at Milwaukee Public Schools. The hope is that this will become a powerful recruiting and enrollment tool.</p>
+    </div>
+    <h3><button>=></button> Roadmap to Readiness Website</h3>
+    <div class="hidden"><p>This website was created in just two short weeks and involves a two-woman team: my friend and colleague Shelly Keller, a talented database administrator who manages the back end, and yours truly, who took an existing Wordpress theme and modified it to fit Milwaukee Public Schools style and branding considerations.</p>
+    <p>The website was created to better support the educational needs of the 75,000 K-8 public school children in Milwaukee and their families during virtual learning.</p>
+    </div>
+    <h3><button>=></button> Diederich College of Communication Website</h3>
+    <div class="hidden"><p>Item description.</p>
+    </div>
+    <h3><button>=></button> GIPHY API</h3>
+    <div class="hidden"><p>Item description.</p>
+    </div>
+    <h3><button>=></button> TV Maze API</h3>
+    <div class="hidden"><p>Item description.</p>
+    </div>
+    <h3><button>=></button> Python Bikeshare Project</h3>
+    <div class="hidden"><p>Item description.</p>
     </div>
   </div>
 </div>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </body>
 </html>
