fixed broken images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
       
       
-      <h2 id="about"><img alt="Laura White" class="float-right" src="/images/laura.jpg" />About Me</h2>
+      <h2 id="about"><img alt="Laura White" class="float-right" src="https://avatars.githubusercontent.com/u/13588216?v=4" />About Me</h2>
       <p id="about">Hi! I'm Laura, a web developer with six years of experience creating and optimizing front-end content for businesses and educational institutions.</p>
       <p>Currently, I work as the District Webmaster for Milwaukee Public schools and working on some newer projects involving the React library and Node.js. To learn more about my work history, check out my <a href="https://www.linkedin.com/in/laura-white-32087193/" target="_blank">LinkedIn profile</a>!</p>
   </header>
@@ -41,7 +41,7 @@
     <p>Check out my solution on Github!</p>
     </div>
     <h3><button>=></button> Lavender Hill Properties Website</h3>
-    <div class="hidden"><p><img alt="murray avenue duplex" class="float-left portfolio-img" src="/images/murray_ave.jpeg">The <a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank"></a>Lavender Hill Properties</a> website was designed for now husband in 2015 when I first learned how to put HTML and CSS together. Currently, I am redesigning the website using React, CSS in JS components and adding a node.js backend so that emails can be sent directly for inquiries. It's always a great feeling to put new skills to use.</p>
+    <div class="hidden"><p>The <a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank"></a>Lavender Hill Properties</a> website was designed for now husband in 2015 when I first learned how to put HTML and CSS together. Currently, I am redesigning the website using React, CSS in JS components and adding a node.js backend so that emails can be sent directly for inquiries. It's always a great feeling to put new skills to use.</p>
       <p><a href="http://l-white.github.io/Lavender-Hill-Properties/" target="_blank">Check out a working version of this website!</a></p>
       <p>Technologies: HTML and CSS</p>
     </div>
