--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     
     <h3><button>=></button> GIPHY API</h3>
     <div class="hidden">
-      <iframe style="padding-left:15px;" src="https://giphy.com/embed/Ax6nHeqs1OnKcEu6tR" width="240" height="120" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/antirecords-cats-jaywalker-andy-shauf-Ax6nHeqs1OnKcEu6tR">via GIPHY</a></p>
-      <p>This web application makes a call to the GIPHY APPI to fetch gifs from just about any subject and adds them to the webpage. You can fetch gifs of people eating, drinking, laughing, or of characters from your favorite shows. This app brought many laughs to my loved ones and me during the pandemic!</p>
+      <iframe style="padding-left:15px;" src="https://giphy.com/embed/Ax6nHeqs1OnKcEu6tR" width="240" height="120" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
+      <p>This web application makes a call to the <a href="https://developers.giphy.com/docs/api#quick-start-guide" target="_blank">GIPHY API</a> to fetch gifs from just about any subject and adds them to the webpage. You can fetch gifs of people eating, drinking, laughing, or of characters from your favorite shows. This app brought many laughs to my loved ones and me during the pandemic!</p>
       <p>Check out my <a href="https://github.com/l-white/giphy-party" target="_blank">code on Github</a> and <a href="https://l-white.github.io/giphy-party/" target="_blank">try my working version of this app</a>.</p>
       <p>Technologies: HTML, CSS, JavaScript, APIs</p>
     </div>
