--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h3>I have working knowledge in the following technologies:</h3>
   <p>Node.js &bull; React &bull; C# / .NET Core &bull; PHP &bull; Java</p>
   <a href="#top"><p>Back to top.</p></a>
-  <footer><p>Copyright Laura White, 2022<br />Images are either from my own projects or use Creative Commons licenses.</p>
+  <footer><p>Images are either from my own projects or use Creative Commons licenses.</p>
   </footer>
 </div>
 <script src="script.js"></script>
