--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
   <!--</div>-->
   <h2 id="skills">Skills</h2>
   <h3>I am proficient in the following technologies:</h3>
-  <p>HTML &bull; CSS &bull; JavaScript &bull; Python &bull; SQL &bull; Git / Github &bull; Technical SEO &bull; Google Analytics &bull; XML &bull; Wordpress</p>
-  <h3>I also have additional, professional work experience in the following technologies:</h3>
-  <p>Node.js &bull; React &bull; C# / .NET Core &bull; Azure DevOps</p>
+  <p>React &bull; C# / .NET Core &bull; Azure DevOpsHTML &bull; HTML &bull; CSS &bull; JavaScript &bull; Python &bull; SQL &bull; Git / Github &bull; Technical SEO &bull; Google Analytics &bull; XML &bull; WordPress</p>
   <a href="#top"><p>Back to top.</p></a>
   <footer><p>Images are either from my own projects or use Creative Commons licenses.</p>
   </footer>
