--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <!--</div>-->
   <h2 id="skills">Skills</h2>
   <h3>I am proficient in the following technologies:</h3>
-  <p>React &bull; C# / .NET Core &bull; Azure DevOps &bull; HTML &bull; CSS &bull; JavaScript &bull; Python &bull; SQL &bull; Git / Github &bull; Technical SEO &bull; Google Analytics &bull; XML &bull; WordPress</p>
+  <p>HTML &bull; CSS &bull; JavaScript &bull; Python &bull; SQL &bull; Git / Github &bull; Technical SEO &bull; Google Analytics &bull; XML &bull; WordPress</p>
   <a href="#top"><p>Back to top.</p></a>
   <footer><p>Images are either from my own projects or use Creative Commons licenses.</p>
   </footer>
