--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       
       <h2 id="about"><img alt="Laura White" class="float-right" src="https://avatars.githubusercontent.com/u/13588216?v=4" />About Me</h2>
-      <p id="about">Hi! I'm Laura, a web developer with six years of experience creating and optimizing front-end content for businesses and educational institutions.</p>
+      <p id="about">Hi! I'm Laura, a web developer with experience creating and optimizing front-end content for businesses and educational institutions.</p>
       <p>I work as the District Webmaster for Milwaukee Public Schools and am currently working on some newer projects involving the React library and Node.js. To learn more about my work history, check out my <a href="https://www.linkedin.com/in/laura-white-32087193/" target="_blank">LinkedIn profile</a>!</p>
   </header>
   <div class="portfolio">
